[package]
name = "transaction_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.145", features = ["derive"] }
rust_decimal = "1.26.1"
thiserror = "1.0.37"
anyhow = "1.0.65"
